# microgpt-name-gen

./: .copier-answers.yml  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: copier.yaml
src/microgpt_name_gen/: __main__.py  cli.py  main.py
tests/: test_hello.py
