[project]
name = "microgpt-name-gen"
description = "A minimal gpt-based name generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "==3.13.*"
dependencies = []
version = "0.0.0"

[dependency-groups]
dev = [
    "commitizen==4.13.0",
    "importlib-metadata==8.7.1",
    "pre-commit==4.5.1",
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "ruff==0.14.14",
    "ty==0.0.14",
    "typing-extensions==4.15.0",

]

[tool.uv]
required-version = ">=0.8.0"
native-tls = true # Use the system TLS library

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/dvatvani/microgpt-name-gen"
"Source" = "https://github.com/dvatvani/microgpt-name-gen"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--junitxml=report.xml",
]
# https://stackoverflow.com/a/50610630
pythonpath = [
  ".",
  "src"
]

[tool.ruff]
respect-gitignore = true

[tool.commitizen]
version_provider = "uv"
